# peyesim

./: .gitignore  README.md  eyesim  pyproject.toml
notebooks/: 01_overview.ipynb  02_multimatch.ipynb  03_repetitive_similarity.ipynb  04_latent_transforms.ipynb
src/peyesim/: __init__.py  _utils.py  density.py  entropy.py  eye_table.py  fixations.py  latent_transforms.py  multimatch.py  overlap.py  regression.py  repetitive_similarity.py  saccades.py  similarity.py  visualization.py
tests/: test_center_fixations.py  test_density_by.py  test_entropy.py  test_geometric_transforms.py  test_missing_coverage.py  test_multimatch_invariance.py  test_multimatch_parity.py  test_multiscale_density.py  test_normalize_density.py  test_public_api_parity.py  test_regression_fixes.py  test_repetitive_similarity.py  test_saccades.py  test_sample_density.py  test_sample_density_time.py  test_similarity_cv.py  test_similarity_emd.py  test_similarity_transforms.py  test_similarity_wrappers.py  test_template_similarity.py  test_weak_areas.py
